# sigtool

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
sigtool/: __init__.py  apk_info_extractor.py  apk_signature_extractor.py  base64_encoder.py  colon_lowercase.py  colon_uppercase.py  crc32_and_hashcode_calculator.py  main.py  output_formatter.py  pem_certificate_generator.py  pem_signature_extractor.py  signature_hash_calculator.py  smali_bytearray_generator.py
sigtool/sighooks/: __init__.py
sigtool/sighooks/mt_enhanced_hook/: README.md  __init__.py  mthook.py  mthook_generator.py
