[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigtool"
version = "3.0"
description = "A command-line tool for in-depth APK signature and keystore analysis."
readme = "README.md"
authors = [
    { name = "MuhammadRizwan", email = "mrizwan87@protonmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
homepage = "https://github.com/muhammadrizwan87/sigtool"

[project.scripts]
sigtool = "sigtool.main:main"

[tool.setuptools]
packages = ["sigtool", "sigtool.sighooks", "sigtool.sighooks.mt_enhanced_hook"]

[tool.setuptools.package-data]
"sigtool" = [
    "lib/smali.jar"
]